2.4.2 () -

- TW-1545 cc1plus: error: unrecognized command line option '-std=c++11' (thanks
          to Petteri).
- TW-1546 column type due.remaining breaks colors on due tasks (thanks to
          Renato Alves).
- TW-1547 Recur column is always shown even if no recurring task is displayed
          (thanks to Renato Alves).
- TW-1550 _contexts helper-command (thanks to David Patrick).
- Eliminated some code that is not UTF8-safe.
- Removed pthreads linkage.
- Implemented the context feature.
- Closed dangling pipes in execute (), resolving problems when a hook script
  forks (thanks to Jens Erat).
- Re-enabled hook script feedback when exiting with 0 exit status.

------ current release ---------------------------

2.4.1 (2015-02-16) 82e019a4a8b20de63d53b51d59b8d1c89d3c05b2

- TW-1457 Non-existent attributes are not properly handled (thanks to Tomas
          Babej).
- TW-1484 The 'history' and 'ghistory' reports do not obey rc.color.label.
- TW-1486 task wait shows completed tasks which has a wait attribute (thanks to
          Sujeevan Vijayakumaran).
- TW-1487 Task export exports some numeric attributes as strings (thanks to
          Tomas Babej).
- TW-1491 Regression in deleting due dates (thanks to Jens Erat).
- TW-1492 compiling v2.4.0 using musl(libc) (thanks to V.Krishn).
- TW-1495 German translation for taskwarrior (thanks to Jens Erat).
- TW-1498 Filtering for presence of UDA matches all tasks (thanks to Ralph
          Bean).
- TW-1501 Calc can't handle multi-digit numbers in some expressions (thanks to
          Jeremy John Reeder).
- TW-1502 Successful on-add hook with no output confuses TW (thanks to Tomas
          Babej).
- TW-1504 On-modify hook does not accept correct JSON format (thanks to Tomas
          Babej).
- TW-1505 completely ignore mis-named hook scripts (thanks to Tomas Babej,
          David Patrick).
- TW-1509 Hooks modifications performed on sync not sycning back (thanks to
          Tomas Babej).